--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                         </goals>
                         <configuration>
                             <mainClass>
-                                sk.stuba.fei.uim.oop.Assignment1
+                                sk.stuba.fei.uim.oop.Main
                             </mainClass>
                         </configuration>
                     </execution>
